[#185] refactor(PerformanceModifyService): 삭제 작업을 먼저 수행하도록 리팩토링